--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,35 +1,15 @@
 name: Build APK
-
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-
+on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
-    
     steps:
-    - uses: actions/checkout@v3
-      
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        
-    - name: Make gradlew executable
-      run: chmod +x ./gradlew
-      
-    - name: Setup Android SDK
-      uses: android-actions/setup-android@v2
-      
+    - uses: actions/checkout@v2
     - name: Build APK
-      run: ./gradlew assembleDebug
-      
-    - name: Upload APK
-      uses: actions/upload-artifact@v3
+      run: |
+        chmod +x gradlew
+        ./gradlew assembleRelease
+    - uses: actions/upload-artifact@v2
       with:
-        name: app-debug-apk
-        path: TmessagesProj/build/outputs/apk/debug/
+        name: app-release
+        path: app/build/outputs/apk/release/app-release.apk
