--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,15 +1,36 @@
-name: Build APK
-on: [push]
+name: Build ByneGram APK
+
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+
 jobs:
   build:
     runs-on: ubuntu-latest
+    
     steps:
-    - uses: actions/checkout@v2
-    - name: Build APK
-      run: |
-        chmod +x gradlew
-        ./gradlew assembleRelease
-    - uses: actions/upload-artifact@v2
+    - name: Checkout code
+      uses: actions/checkout@v4
+      
+    - name: Set up JDK 17
+      uses: actions/setup-java@v4
       with:
-        name: app-release
-        path: app/build/outputs/apk/release/app-release.apk
+        java-version: '17'
+        distribution: 'temurin'
+        
+    - name: Change wrapper permissions
+      run: chmod +x ./gradlew
+      
+    - name: Build Release APK
+      run: |
+        cd TMessagesProj
+        ./gradlew assembleRelease --no-daemon --stacktrace
+        
+    - name: Upload APK Artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: ByneGram-App
+        path: TMessagesProj/app/build/outputs/apk/release/*.apk
+        retention-days: 7
