--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,20 +1,36 @@
-name: Debug Build
+name: Build ByneGram APK
 
-on: [push]
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
-  debug:
+  build:
     runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
     
-    - name: List project structure
-      run: |
-        ls -la
-        echo "=== TMessagesProj contents ==="
-        ls -la TMessagesProj/
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+      
+    - name: Set up JDK 17
+      uses: actions/setup-java@v4
+      with:
+        java-version: '17'
+        distribution: 'temurin'
         
-    - name: Check gradle files
+    - name: Change wrapper permissions
+      run: chmod +x ./gradlew
+      
+    - name: Build Release APK
       run: |
-        find . -name "build.gradle" -type f
-        find . -name "gradlew" -type f
+        cd TMessagesProj
+        ./gradlew assembleRelease --no-daemon --stacktrace
+        
+    - name: Upload APK Artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: ByneGram-App
+        path: TMessagesProj/app/build/outputs/apk/release/*.apk
+        retention-days: 7
