--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,36 +1,25 @@
-name: Build ByneGram APK
+name: Debug Project Structure
 
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+on: [workflow_dispatch]
 
 jobs:
-  build:
+  debug:
     runs-on: ubuntu-latest
-    
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        
-    - name: Change wrapper permissions
-      run: chmod +x ./gradlew
-      
-    - name: Build Release APK
+    - uses: actions/checkout@v4
+    
+    - name: Check project structure
       run: |
-        cd TMessagesProj
-        ./gradlew assembleRelease --no-daemon --stacktrace
-        
-    - name: Upload APK Artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: ByneGram-App
-        path: TMessagesProj/app/build/outputs/apk/release/*.apk
-        retention-days: 7
+        echo "=== ROOT FOLDER ==="
+        ls -la
+        echo ""
+        echo "=== TMessagesProj FOLDER ==="
+        ls -la TMessagesProj/
+        echo ""
+        echo "=== GRADLE FILES ==="
+        find . -name "gradlew" -type f
+        find . -name "build.gradle" -type f
+        find . -name "settings.gradle" -type f
+        echo ""
+        echo "=== ANDROID MANIFEST ==="
+        find . -name "AndroidManifest.xml" -type f
