--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,19 +1,13 @@
 name: Build ByneGram APK
 
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-  workflow_dispatch:
+on: [push, workflow_dispatch]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+    - uses: actions/checkout@v4
       
     - name: Set up JDK 17
       uses: actions/setup-java@v4
@@ -21,16 +15,23 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         
-    - name: Make gradlew executable
-      run: chmod +x ./gradlew
-      
-    - name: Build Release APK
+    - name: Build APK
       run: |
-        ./gradlew assembleRelease --no-daemon --stacktrace
+        chmod +x gradlew
+        ./gradlew assembleRelease --stacktrace
         
-    - name: Upload APK Artifact
+    - name: Find and list APK files
+      run: |
+        find . -name "*.apk" -type f | head -10
+        echo "=== APK search results ==="
+        
+    - name: Upload any found APK
       uses: actions/upload-artifact@v4
       with:
         name: ByneGram-APK
-        path: app/build/outputs/apk/release/*.apk
+        path: |
+          /build/outputs/apk//*.apk
+          /app/build/outputs/apk//*.apk
+          build/outputs/apk/**/*.apk
+        if-no-files-found: warn
         retention-days: 30
